homepage fixes, rows out of alignment for sellers, fixed min clients count not assigning on job creation

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -332,7 +332,7 @@ img {
       height: 40px;
       overflow-y: hidden; }
     .items_item .count {
-      margin-top: 20px; }
+      margin-top: 10px; }
       .items_item .count span {
         font-weight: 600; }
       .items_item .count .right {
